[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yolo_kiyoshi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.3.0"
openai = "^1.52.2"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
jupyterlab = "^4.3.0"
tiktoken = "^0.8.0"
pymupdf = "^1.24.13"
spacy = "3.7.5"
chromadb = "^0.5.18"
langchain-openai = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
